- added new control - updated configs - added postman collection

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,8 @@ spring.output.ansi.enabled=ALWAYS
 spring.jpa.properties.javax.persistence.validation.mode=none
 
 #server.port=8082
+
+host.auth=http://localhost:8080
+app.client.id=client
+app.client.secret=client
+auth.server.schem=http
