--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/rest_db?useSSL=false&createDatabaseIfNotExist=true&useLegacyDatetimeCode=false&serverTimezone=America/New_York
-spring.datasource.username=root
-spring.datasource.password=1890
+spring.datasource.username=[username]
+spring.datasource.password=[password]
 spring.datasource.initialization-mode=always
 
 spring.jpa.hibernate.ddl-auto=update
@@ -15,8 +15,6 @@ logging.level.org.hibernate.SQL=debug
 
 spring.output.ansi.enabled=ALWAYS
 spring.jpa.properties.javax.persistence.validation.mode=none
-
-#server.port=8082
 
 host.auth=http://localhost:8080
 app.client.id=client
